[gd_scene load_steps=5 format=3 uid="uid://dq6384umcuo0"]

[ext_resource type="Script" path="res://Script/pauseScreen.gd" id="1_qnq4y"]
[ext_resource type="Texture2D" uid="uid://dfb1wodvk2eb1" path="res://Sprite/UI/pause-sheet.png" id="1_yjqo0"]
[ext_resource type="Texture2D" uid="uid://chnm2ha7gucao" path="res://Sprite/UI/exitwhite.png" id="2_fdsjr"]
[ext_resource type="Texture2D" uid="uid://d1bvn601jk3kl" path="res://Sprite/UI/exitRed.png" id="3_hewd8"]

[node name="Pause" type="Control" groups=["ui"]]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qnq4y")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.490196)
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -245.5
offset_top = -258.0
offset_right = 245.5
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
button_mask = 3
icon = ExtResource("1_yjqo0")
flat = true

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_fdsjr")
texture_hover = ExtResource("3_hewd8")
texture_focused = ExtResource("3_hewd8")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
